# Raw-Driver-Kit

./: CMakeLists.txt  README.md
arch/x86/: CMakeLists.txt  entry.S  idt.c  main32.c  pic.c  ps2_keyboard.c  rdksh32.linker.ld  timer.c
arch/x86/boot/: grub.cfg
arch/x86/include/x86/: idt.h  io.h  pic.h  ps2_keyboard.h  system.h  timer.h
arch/x86/include/x86/intr/: defs.h  handlers.h  idt.h  stubs.h
arch/x86/intr/: handlers.c  idt.S  idt.c  pic.c  stubs.S
cmake/: MakeBootGrubTarget.cmake
libc/: CMakeLists.txt  stdlib.c  stdlib.cc  string.c  string.cc
libc/include/: ctype.h  stdbool.h  stddef.h  stdint.h  stdlib.h  string.h
